# gecco2020-brkga

./: CMakeLists.txt  LICENSE  README.md  brkgaAPI-LICENSE
instances-HHCRSP/: README.md
irace-brkga/: README.md  forbidden.txt  parameters.txt  scenario.txt  target-runner
solutions/: README.md  solution-10-10-7.txt  solution-10-3-4.txt  solution-10-4-10.txt  solution-10-6-13.txt  solution-10-9-1.txt  solution-100-1-1.txt  solution-100-1-10.txt  solution-100-1-13.txt  solution-100-1-2.txt  solution-100-1-3.txt  solution-100-1-4.txt  solution-100-1-5.txt  solution-100-1-6.txt  solution-100-1-7.txt  solution-100-1-8.txt  solution-100-10-14.txt  solution-100-10-2.txt  solution-100-10-3.txt  solution-100-10-5.txt  solution-100-10-6.txt  solution-100-10-7.txt  solution-100-2-10.txt  solution-100-2-11.txt  solution-100-2-12.txt  solution-100-2-14.txt  solution-100-2-2.txt  solution-100-2-3.txt  solution-100-2-6.txt  solution-100-2-8.txt  solution-100-2-9.txt  solution-100-3-3.txt  solution-100-3-5.txt  solution-100-4-1.txt  solution-100-4-10.txt  solution-100-4-14.txt  solution-100-4-3.txt  solution-100-4-4.txt  solution-100-4-6.txt  solution-100-4-8.txt  (+345 more)
solutions/routes/: solution-10-1-13.txt  solution-10-2-8.txt  solution-10-5-1.txt  solution-10-7-15.txt  solution-10-8-2.txt  solution-100-1-11.txt  solution-100-1-12.txt  solution-100-1-14.txt  solution-100-1-15.txt  (+394 more)
src/: Instance.cpp  Instance.h  Solution.cpp  Solution.h  SortingDecoder.cpp  SortingDecoder.h  Task.cpp  Task.h  mainBrkga.cpp
tools/: analyzer.R  bks.csv  fmtable.R  solViewer.py  solveAll.sh
